Make sure the header does not overlap anything

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -52,6 +52,7 @@ body
 
 main
   margin-top: 175px
+  padding-top: 25px
 
 .alert
   margin-top: 20px
@@ -151,7 +152,6 @@ main
   .new-post
     font-family: $description-font
     font-size: 16px
-    margin-top: 70px
     .form-group
       margin: 15px
       textarea
@@ -259,7 +259,6 @@ main
       width: 40px
 
 .sign-in
-  margin-top: 75px
   display: flex
   flex-direction: column
   align-items: center
@@ -288,6 +287,7 @@ main
     .meta-item
       font-size: 24px
   .main
+    margin-top: 100px
     .tiles
       display: flex
       flex-direction: row
